--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 server.servlet.context-path= /car-management
 api.timeout=40000
 
-spring.datasource.url=jdbc:mysql://192.168.1.106:3306/car
+spring.datasource.url=jdbc:mysql://localhost:3306/car
 spring.datasource.username=root
 spring.datasource.password=root121120
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
