--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,7 @@ upload.cloudinary.cloud-name=dhoyfs2wa
 upload.cloudinary.api-key=879153232285769
 upload.cloudinary.api-secret=W_Q8dvHmN9lhlFoL7IPFV2xtC2M
 
+#module momo
+momo.module.url=http://localhost:8085/momo
+
 
