--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 #redis
-spring.redis.host=192.168.1.106
+spring.redis.host=localhost
 spring.redis.port=6379
-spring.redis.password=hanh123
+spring.redis.password=hanh121120
 spring.redis.timeout=1000
 
 
@@ -21,7 +21,18 @@ upload.cloudinary.cloud-name=dhoyfs2wa
 upload.cloudinary.api-key=879153232285769
 upload.cloudinary.api-secret=W_Q8dvHmN9lhlFoL7IPFV2xtC2M
 
+
 #module momo
 momo.module.url=http://localhost:8085/momo
 
+
+#rabbit
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=quanghanh2k2
+spring.rabbitmq.password=hanh121120
+spring.rabbitmq.listener.simple.acknowledge-mode=manual
+rabbitmq.direct-queue.status-order=update.status-order
+rabbitmq.direct-exchange-momo=momo-integrator
+rabbitmq.direct-routing.status-order=update.status-order
 
